src/objects/ICCS_Bank_Account__c.object
<CustomObject>
    <description>Used by ICCS to store bank account codes.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account to which the bank account belongs. Can only be of the Airline Headquarters type.</description>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The ICCS Bank Account can only belong to an Airline Headquarters account.</errorMessage>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>IATA_Airline</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>ICCS Bank Accounts</relationshipLabel>
        <relationshipName>ICCS_Bank_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <formula>TEXT(CurrencyIsoCode)</formula>
        <label>Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notice_of_Assignment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notice of Assignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Third_Party_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Third Party Payment</label>
        <type>Checkbox</type>
    </fields>
    <label>ICCS Bank Account</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Currency__c</columns>
        <columns>Status__c</columns>
        <columns>Notice_of_Assignment__c</columns>
        <columns>Third_Party_Payment__c</columns>
        <columns>Description__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>ICCS Bank Account Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ICCS Bank Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CodeFormatValidation</fullName>
        <active>true</active>
        <description>Ensures the format is: Two-letter Airline Code + 0-4 alphanumeric characters</description>
        <errorConditionFormula>NOT(
  AND(
    LEFT( Name , 2) =  Account__r.Airline_designator__c ,
    LEN(Name) &gt;= 2,
    LEN(Name) &lt;= 6
  )
)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Invalid Bank Account Code format. Expected format is 2 to 6 alphanumerical characters, with the first 2 being the Airline code.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CurrencyIsMandatory</fullName>
        <active>true</active>
        <description>The Currency field is mandatory.</description>
        <errorConditionFormula>ISPICKVAL( CurrencyIsoCode , &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>CurrencyIsoCode</errorDisplayField>
        <errorMessage>The Currency field is mandatory, please select a value.</errorMessage>
    </validationRules>
</CustomObject>